--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,20 @@
     <li><a href="https://en.wikipedia.org/wiki/List_of_Canadian_sports_personalities" target="_blank">Players</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <h1>Upcoming Games</h1>
-  <h2>Game list</h2>
+  <h1>Contact Us</h1>
+
+  <form action="">
+    
+    <input type="text" placeholder="Your Name">
+
+    <input type="email" placeholder="Your Email">
+
+    <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
+
+    <button>Send</button>
+
+
+  </form>
+
 </body>
 </html>
