--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Sports</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="games.html">Games</a></li>
     <li><a href="https://en.wikipedia.org/wiki/List_of_Canadian_sports_personalities" target="_blank">Players</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
-  <h1>Sports World</h1>
-  <p>Sport (UK) or sports (US) are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
-  <img src="img/banner.jpg" alt="Sports">
+</nav>
+  <div>
+    <h1>Sports World</h1>
+    <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] <span>through</span> casual or organised participation, <br> aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, <hr> and in some cases, entertainment for spectators.</p>
+  </div>
+  <a href="http://www.evo.com/shop/ski.aspx" target="_blank">
+    <img src="img/banner.jpg" alt="Sports">
+  </a>
+
+<footer>
+  
+
+
+</footer>
+
 </body>
 </html>
