--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<img class="banner" src="img/banner.jpg" alt="Sports">
+
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
@@ -14,13 +17,12 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
+
   <div>
     <h1>Sports World</h1>
     <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] <span>through</span> casual or organised participation, <br> aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, <hr> and in some cases, entertainment for spectators.</p>
   </div>
-  <a href="http://www.evo.com/shop/ski.aspx" target="_blank">
-    <img src="img/banner.jpg" alt="Sports">
-  </a>
+    
 
 <footer>
   
