--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
   </ul>
 </nav>
 
-  <div>
+  <div class="banner-text">
     <h1>Sports World</h1>
-    <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] <span>through</span> casual or organised participation, <br> aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, <hr> and in some cases, entertainment for spectators.</p>
+    <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
   </div>
-    
+  <div class="inline-wrapper">
+    <img src="img/ski.jpg" alt="Ski"><img src="img/football.jpg" alt="Football"><img src="img/basketball.jpg" alt="Basketball">
+  </div>
+
 
 <footer>
   
