Hover effect on sports image
Add style for hover effect

--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
     <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
   </div>
   <div class="inline-wrapper">
-    <img src="img/ski.jpg" alt="Ski"><img src="img/football.jpg" alt="Football"><img src="img/basketball.jpg" alt="Basketball">
+    <div>
+      <img src="img/ski.jpg" alt="Ski">
+      <h4>Ski</h4>
+    </div>
+    
+    <div>
+    <img src="img/football.jpg" alt="Football">
+      <h4>Football</h4>
+    </div>
+    <div>
+      <img src="img/basketball.jpg" alt="Basketball">
+      <h4>Basketball</h4>
+    </div>
+    
   </div>
 
 
