--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<img class="banner" src="img/banner.jpg" alt="Sports">
+<img class="banner" src="img/banner.jpg" alt="World">
 
 <nav>
   <ul>
