--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
 
-    <button>Submit</button>
+    <button class="btn">Submit</button>
 
 
   </form>
