--- a/games.html
+++ b/games.html
@@ -2,16 +2,58 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Sports</title>
+  <title>Games</title>
+ <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="games.html">Games</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/List_of_Canadian_sports_personalities" target="_blank">Players</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <h1>Upcoming Games</h1>
-  <h2>Game list</h2>
+  
+  <nav class="desktop-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="games.html">Games</a></li>
+      <li><a href="players.html">Players</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <nav class="mobile-nav">
+
+  <div class="hamburger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+    
+  </nav>
+  <h1 class="games-topic page-top">Upcoming Games</h1>
+  <div class="table-wrapper">
+    <table class="table table-striped">
+      <tr>
+        <th>Date</th>
+        <th>Time</th>
+        <th>Team 1</th>
+        <th>Team 2</th>
+      </tr>
+      <tr>
+        <td>Monday, March 14, 2016</td>
+        <td>7:00PM ET</td>
+        <td>DAL</td>
+        <td>CHA</td>
+      </tr>
+      <tr>
+        <td>Monday, March 14, 2016</td>
+        <td>7:30PM ET</td>
+        <td>DEN</td>
+        <td>MIA</td>
+      </tr>
+      <tr>
+        <td>Monday, March 14, 2016</td>
+        <td>7:30PM ET</td>
+        <td>CHI</td>
+        <td>TOR</td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
