--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>Sports</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <img class="banner" src="img/banner.jpg" alt="Hello">
 
-<nav>
+
+<nav class="desktop-nav">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="games.html">Games</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/List_of_Canadian_sports_personalities" target="_blank">Players</a></li>
+    <li><a href="players.html">Players</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
+</nav>
+
+<nav class="mobile-nav">
+
+<div class="hamburger">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+  
 </nav>
 
   <div class="banner-text">
