--- a/players.html
+++ b/players.html
@@ -3,14 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Sports</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="games.html">Games</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/List_of_Canadian_sports_personalities" target="_blank">Players</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <h1>Famous Players</h1>
+  
+  <nav class="desktop-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="games.html">Games</a></li>
+      <li><a href="players.html">Players</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <nav class="mobile-nav">
+
+  <div class="hamburger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+    
+  </nav>
+  <h1 class="page-top">Famous Players</h1>
+
+
+<div class="row">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player1.jpg">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player2.jpg">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player3.jpg">
+</div>
+
+<div class="row">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player1.jpg">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player2.jpg">
+  <img class="col-md-4 col-sm-6 col-xs-12" src="img/player3.jpg">
+</div>
+ 
 </body>
 </html>
