--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>Sports</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
 
 <nav class="desktop-nav">
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html"><i class="glyphicon glyphicon-stats"></i> Home</a></li>
     <li><a href="games.html">Games</a></li>
     <li><a href="players.html">Players</a></li>
     <li><a href="contact.html">Contact</a></li>
