--- a/players.html
+++ b/players.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sports</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
   </div>
     
   </nav>
-  <h1 class="page-top">Famous Players</h1>
+  <h1 class="page-top"><i class="fa fa-home"></i> Famous Players</h1>
 
 
 <div class="row">
