--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
     
   </nav>
   <h1 class="games-topic page-top">Upcoming Games</h1>
-  <div class="table-wrapper">
+  <div class="table-wrapper game-table">
     <table class="table table-striped">
       <tr>
         <th>Date</th>
@@ -55,5 +55,16 @@
       </tr>
     </table>
   </div>
+  <div class="text-center">
+  <button id="show-btn" class="btn btn-primary">Show</button>
+  <button id="hide-btn" class="btn btn-info">Hide</button>
+  <button id="toggle-btn" class="btn btn-default">Toggle</button>
+  <button id="get-btn" class="btn btn-default">Get Team 1 from first row</button>
+
+  </div>
+
+  <script src="js/jquery-1.12.2.min.js"></script>
+  <script src="js/game.js"></script>
+
 </body>
 </html>
