Image Toggle with JQuery

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>Sports World</h1>
     <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
   </div>
-  <div class="inline-wrapper">
+  <div class="inline-wrapper diff-sports">
     <div>
       <img src="img/ski.jpg" alt="Ski">
       <h4>Ski</h4>
@@ -63,6 +63,9 @@
 
 
 </footer>
+
+<script src="js/jquery-1.12.2.min.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
