--- a/games.html
+++ b/games.html
@@ -28,7 +28,7 @@
   </nav>
   <h1 class="games-topic page-top">Upcoming Games</h1>
   <div class="table-wrapper game-table">
-    <table class="table table-striped">
+    <table class="table table-striped" id="game-table">
       <tr>
         <th>Date</th>
         <th>Time</th>
@@ -60,8 +60,21 @@
   <button id="hide-btn" class="btn btn-info">Hide</button>
   <button id="toggle-btn" class="btn btn-default">Toggle</button>
   <button id="get-btn" class="btn btn-default">Get Team 1 from first row</button>
-
   </div>
+
+  <form action="#" class="form-inline text-center">
+
+  <input class="form-control" type="text" id="date" placeholder="date">
+
+  <input class="form-control" type="text" id="time" placeholder="time">
+
+  <input class="form-control" type="text" id="team1" placeholder="team1">
+
+  <input class="form-control" type="text" id="team2" placeholder="team2">
+
+  <button class="btn btn-default" id="add-btn">Add</button>
+
+  </form>
 
   <script src="js/jquery-1.12.2.min.js"></script>
   <script src="js/game.js"></script>
