--- a/index.html
+++ b/index.html
@@ -14,7 +14,43 @@
 </head>
 <body>
 
-<img class="banner" src="img/banner.jpg" alt="Hello">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img class="banner" src="img/banner.jpg">
+      <div class="carousel-caption">
+        <h1>Sports World</h1>
+        <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
+      </div>
+    </div>
+    <div class="item">
+      <img class="banner" src="img/banner-2.jpg">
+      <div class="carousel-caption">
+        <h1>Next Game</h1>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
 
 
 <nav class="desktop-nav">
@@ -36,10 +72,10 @@
   
 </nav>
 
-  <div class="banner-text">
+<!--   <div class="banner-text">
     <h1>Sports World</h1>
     <p><strong>Sport (UK)</strong> or <em>sports (US)</em> are all forms of usually competitive physical activity or games which,[1] through casual or organised participation, aim to use, maintain or improve physical ability and skills while providing enjoyment to participants, and in some cases, entertainment for spectators.</p>
-  </div>
+  </div> -->
   <div class="inline-wrapper diff-sports">
     <div data-toggle="modal" data-target="#ski-modal">
       <img src="img/ski.jpg" alt="Ski">
