--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,19 @@
   </nav>
   <h1 class="contact-topic page-top">Contact Us</h1>
 
-  <form class="container contact-form" action="">
+  <form class="container contact-form" action="#">
     
-    <input class="form-control" type="text" placeholder="Your Name">
+    <input id="name" class="form-control" type="text" placeholder="Your Name">
 
-    <input class="form-control" type="email" placeholder="Your Email">
+    <input id="email" class="form-control" type="email" placeholder="Your Email">
 
-    <textarea class="form-control" cols="30" rows="10" placeholder="Your Message"></textarea>
+    <textarea id="message" class="form-control" cols="30" rows="10" placeholder="Your Message"></textarea>
 
-    <button class="btn btn-success pull-right">Submit</button>
+    <button class="btn btn-success pull-right" id="submit-btn">Submit</button>
   </form>
+
+  <script src="js/jquery-1.12.2.min.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 </html>
