Integrate Firebase for contact

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <title>Sports</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 <body>
   <nav class="desktop-nav">
