add and remove game object

--- a/games.html
+++ b/games.html
@@ -5,6 +5,7 @@
   <title>Games</title>
  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 <body>
   
@@ -34,24 +35,6 @@
         <th>Time</th>
         <th>Team 1</th>
         <th>Team 2</th>
-      </tr>
-      <tr>
-        <td>Monday, March 14, 2016</td>
-        <td>7:00PM ET</td>
-        <td>DAL</td>
-        <td>CHA</td>
-      </tr>
-      <tr>
-        <td>Monday, March 14, 2016</td>
-        <td>7:30PM ET</td>
-        <td>DEN</td>
-        <td>MIA</td>
-      </tr>
-      <tr>
-        <td>Monday, March 14, 2016</td>
-        <td>7:30PM ET</td>
-        <td>CHI</td>
-        <td>TOR</td>
       </tr>
     </table>
   </div>
